--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,8 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Konstantinos Psychas
+title: Welcome
+home_title: Home
 email: github_username (at) gmail (dot) com
 description: > # this means to ignore newlines until "baseurl:"
   Personal website of Konstantinos Psychas
